Change link to styleVariable

--- a/src/components/navbar/navbarStyle.scss
+++ b/src/components/navbar/navbarStyle.scss
@@ -1,4 +1,4 @@
-@use '../../../../frontend-app/src/components/common/styleVariables';
+@use '../common/styleVariables';
 
 .navbar_container {
   display: grid;
