--- a/src/components/navbar/navbarStyle.scss
+++ b/src/components/navbar/navbarStyle.scss
@@ -14,9 +14,9 @@
 
 .navbar_logo_container {
   display: flex;
-  align-items: center;
+  align-items: flex-end;
   justify-content: center;
-  height: 15vh;
+  height: 10vh;
 }
 
 .navbar_link_container {
