--- a/src/components/common/searchPanel/searchPanelStyle1.scss
+++ b/src/components/common/searchPanel/searchPanelStyle1.scss
@@ -1,7 +1,6 @@
 .search_panel_container{
-  height: 15vh;
+  height: 10vh;
   width: 100%;
   display: flex;
-  align-items: center;
-  padding-left: 20px;
+  align-items: flex-end;
 }
