--- a/src/components/mainGridElement/mainGridElement.scss
+++ b/src/components/mainGridElement/mainGridElement.scss
@@ -1,17 +1,23 @@
 @use '../common/styleVariables';
 
 .main_grid_element_container{
-  height: 220px;
   background: styleVariables.$lightBlueBgcColor;
   margin-bottom: 15px;
   border-radius: 20px;
+  overflow: hidden;
+  height: 80px;
+  transition: 0.3s;
+
+  &:hover{
+    height: 160px;
+  }
 }
 
 .main_grid_element_container_top {
   display: grid;
   width: 100%;
   overflow:auto;
-  height: 100px;
+  height: 80px;
 }
 
 .single_grid_element_container{
@@ -48,4 +54,30 @@
 
 .main_grid_element_container_bottom{
   display: grid;
+  padding: 0;
+  height: 80px;
+}
+
+.single_grid_element_bottom_icons_container{
+  display: flex;
+  align-items: center;
+  text-align: center;
+  margin:auto;
+  width: 100%;
+}
+
+.single_grid_element_bottom_icons_text{
+  margin-left: 10px;
+}
+
+.single_grid_element_container_bottom{
+  padding: 10px 15px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  color:styleVariables.$mainTextColor;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  margin: auto;
 }
