Added history panel to browse tab

--- a/src/components/indexPage/indexPageStyle.scss
+++ b/src/components/indexPage/indexPageStyle.scss
@@ -1,6 +1,6 @@
 .index_container{
   display: grid;
-  grid-template-columns: 15% 1fr 20%;
+  grid-template-columns: 15% 1fr;
 }
 
 .index_mid_panel{
