--- a/src/components/common/searchPanel/searchPanelStyle1.scss
+++ b/src/components/common/searchPanel/searchPanelStyle1.scss
@@ -1,6 +1,14 @@
-.search_panel_container{
+@use '../styleVariables';
+
+.search_panel_container {
   height: 10vh;
   width: 100%;
   display: flex;
   align-items: flex-end;
+}
+
+@media screen and (max-width: map-get(styleVariables.$breakpoints, "medium")) {
+  .search_panel_container {
+    display: none;
+  }
 }
