--- a/src/components/tabs/browse/rightPanel/browseRightPanelGridElementStyle.scss
+++ b/src/components/tabs/browse/rightPanel/browseRightPanelGridElementStyle.scss
@@ -5,6 +5,7 @@
   padding: 10px;
   margin-top: 10px;
   border-radius: 10px;
+  margin-bottom: 12px;
 }
 
 .browse_right_panel_grid_categories, .browse_right_panel_grid_name{
