Change random tokens

--- a/src/components/navbar/phoneTopNavbarStyle.scss
+++ b/src/components/navbar/phoneTopNavbarStyle.scss
@@ -15,6 +15,7 @@
 .phone_top_navbar_container_left_text{
   margin-right: 15px;
   color: styleVariables.$mainColor;
+  font-weight: 600;
 }
 
 .phone_top_navbar_container_right img{
