--- a/src/index.css
+++ b/src/index.css
@@ -13,8 +13,15 @@ code {
   font-family: 'Nunito', 'sans-serif';
 }
 
+@media screen and (max-width: 768px) {
+
+  ::-webkit-scrollbar {
+    display: none;
+  }
+
+  }
 ::-webkit-scrollbar {
-  width: 10px;
+  width: 4px;
 }
 
 /* Track */
