--- a/src/components/loginPage/loginPageStyle.scss
+++ b/src/components/loginPage/loginPageStyle.scss
@@ -30,3 +30,11 @@
   margin:10px auto 0 auto;
   text-align: center;
 }
+
+#login_page_error{
+  color:#E38C9B;
+  opacity: 0;
+  margin-top: 0;
+  margin-bottom: 5px;
+  transition: 0.3s;
+}
