--- a/src/components/tabs/browse/browseTabMainGridPanel.scss
+++ b/src/components/tabs/browse/browseTabMainGridPanel.scss
@@ -15,6 +15,15 @@
   }
 }
 
+.browse_tab_loader_container{
+  height: calc(76vh - 30px);
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
+
 .browse_tab_main_grid_panel_top_container, .browse_tab_main_grid_panel_bottom_container {
   display: grid;
   height: 80px;
