Add texts to start exam page

--- a/src/components/common/examDetailsTopPanel/examDetailsTopPanelStyle.scss
+++ b/src/components/common/examDetailsTopPanel/examDetailsTopPanelStyle.scss
@@ -16,7 +16,7 @@
 .details_top_panel_exam_name{
   h2{
     color: styleVariables.$darkTextColor;
-    font-size: 2.5em;
+    font-size: 2.5rem;
     margin: 0 0 10px;
   }
 }
