--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@ body {
   width: 100%;
   max-width: 1440px;
   margin: auto;
-  font-family: 'Nunito', 'sans-serif';
+  font-family: 'Nunito', 'sans-serif' !important;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
