Added go back button and exam title to attempt result

--- a/src/components/tabs/browse/rightPanel/browseRightPanelGridElementStyle.scss
+++ b/src/components/tabs/browse/rightPanel/browseRightPanelGridElementStyle.scss
@@ -6,6 +6,7 @@
   margin-top: 10px;
   border-radius: 10px;
   margin-bottom: 12px;
+  cursor: pointer;
 }
 
 .browse_right_panel_grid_categories, .browse_right_panel_grid_name{
