--- a/src/components/AttemptResult/attemptResultGridPanelStyle.scss
+++ b/src/components/AttemptResult/attemptResultGridPanelStyle.scss
@@ -2,39 +2,26 @@
 
 .attempt_result_grid_panel_container {
   cursor: pointer;
-  overflow: hidden;
-  height: 80px;
-  min-height: 80px;
+  min-height: 70px;
   margin-bottom: 15px;
   border-radius: 22px;
   background: styleVariables.$lightBlueBgcColor;
   padding: 0 15px;
-  transition: 0.3s;
+  transition: 0.45s cubic-bezier(.77,.77,.19,1.04);;
 
   &:hover {
-    height: unset;
-    min-height: 80px;
-
     .attempt_result_grid_panel_text, .attempt_result_grid_panel_text_container {
       text-overflow: unset;
       white-space: unset;
       overflow: unset;
-    }
-
-    .attempt_result_grid_panel_top_container {
-      height: unset;
-      min-height: 80px;
-    }
-
-    .attempt_result_answers_container{
-      display: block;
     }
   }
 }
 
 .attempt_result_grid_panel_top_container, .attempt_result_grid_panel_bottom_container {
   display: grid;
-  height: 80px;
+  max-height: 70px;
+  transition: 0.45s cubic-bezier(.77,.77,.19,1.04);;
 }
 
 .attempt_result_grid_panel_top_container {
@@ -46,7 +33,8 @@
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
-  transition: 0.3s;
+  max-height: 70px;
+  transition: 0.45s cubic-bezier(.77,.77,.19,1.04);;
 }
 
 .attempt_result_grid_panel_id_text {
@@ -54,10 +42,11 @@
 }
 
 .attempt_result_grid_panel_text_container {
-  transition: 0.3s;
+  transition: 0.45s cubic-bezier(.77,.77,.19,1.04);;
   display: flex;
   align-items: center;
   justify-items: center;
+  height: 70px;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
@@ -82,13 +71,23 @@
 }
 
 .attempt_result_answers_container{
-  display: none;
+  max-height: 0;
   grid-column: 2;
+  overflow: hidden;
+  transition: 0.45s cubic-bezier(.77,.77,.19,1.04);;
 }
 
 .attempt_result_answer_container{
   display: flex;
+  max-height: 45px;
   align-items: center;
   color:styleVariables.$mainTextColor ;
+}
 
+.attempt_result_answer_container:last-of-type{
+  margin-bottom: 20px;
+}
+
+.attempt_result_correct_answer{
+  color: #82A4F7;
 }
